--- a/res/layout/maps.xml
+++ b/res/layout/maps.xml
@@ -4,5 +4,11 @@
     android:layout_height="fill_parent"
     android:orientation="vertical" >
     
-
+<com.google.android.maps.MapView
+                 android:id="@+id/view_map"
+                 android:layout_width="fill_parent"
+                 android:layout_height="fill_parent"
+                 android:clickable="true"
+                 android:apiKey="0-r6xJnUFi9NbuoEL1GnWN0BclIISG3p2t01_hA"
+                 />
 </LinearLayout>
